replaced input size with css

--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 <div id=settings style=padding-left:50px>
     <input id=reset-button onclick=reset() type=button value=Reset><br>
     <input id=audio-volume max=1 min=0 step=.01 type=range value=1>Audio<br>
-    <input id=link-length maxlength=2 size=2 value=5>Link Length
+    <input id=link-length maxlength=2 style=width:75px value=5>Link Length
 </div>
 
 <hr>
