--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Speedtext.htm</title>
+<title>SpeedText.htm</title>
 <link href=css/speedtext.css rel=stylesheet>
 
 <div>
-    <b>Speedtext.htm</b><br>
+    <b>SpeedText.htm</b><br>
     Score: <b id=score>0</b><br>
     Time: <b id=time-remaining>30</b> out of <b>30</b><br>
     <input id=start_button onclick=start() type=button value="Start [H]">
