--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
     <b>SpeedText.htm</b><br>
     Score: <b id=score>0</b><br>
     Time: <b id=time-remaining>30</b> out of <b>30</b><br>
-    <input id=start_button onclick=start() type=button value="Start [H]">
+    <input id=start-button onclick=start() type=button value="Start [H]">
     <input id=settings-button onclick=settings() type=button value=->
 </div>
 
