--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,6 @@
 <link href=css/speedtext.css rel=stylesheet>
 
 <div>
-    <b>SpeedText.htm</b><br>
     Score: <b id=score>0</b><br>
     Time: <b id=time-remaining>30</b> out of <b>30</b><br>
     <input id=start-button onclick=start() type=button value="Start [H]">
@@ -12,10 +11,10 @@
 </div>
 
 <div id=settings>
-    <input id=reset-button onclick=reset() type=button value=Reset><br>
     <input id=audio-volume max=1 min=0 step=.01 type=range value=1>Audio<br>
     <input id=link-length maxlength=2 value=5>Link Length<br>
-    <input id=start-key maxlength=1 value=H>Start
+    <input id=start-key maxlength=1 value=H>Start<br>
+    <input id=reset-button onclick=reset() type=button value=Reset>
 </div>
 
 <hr>
