--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
 </div>
 
 <div id=settings>
-    <input id=audio-volume max=1 min=0 step=.01 type=range value=1>Audio<br>
+    <input id=audio-volume max=1 min=0 step=".01" type=range value=1>Audio<br>
     <input id=link-length maxlength=2 value=5>Link Length<br>
     <input id=start-key maxlength=1 value=H>Start<br>
     <input id=reset-button onclick=reset() type=button value=Reset>
