reduced dom checks

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 
 <div>
     Score: <b id=score>0</b><br>
-    Time: <b id=time-remaining>30</b> / <b>30</b><br>
+    Time: <b id=time>30</b> / <b>30</b><br>
     <input id=start-button onclick=start() type=button value="Start [H]">
     <input id=settings-button onclick=settings_toggle() type=button value=+>
 </div>
