--- a/index.htm
+++ b/index.htm
@@ -9,16 +9,8 @@
     <input id=start-button onclick=start() type=button value="Start [H]">
     <input id=settings-button onclick=settings_toggle() type=button value=+>
 </div>
-
-<div id=settings>
-    <input id=audio-volume max=1 min=0 step=0.01 type=range value=1>Audio<br>
-    <input id=link-length maxlength=2 value=5>Link Length<br>
-    <input id=start-key maxlength=1 value=H>Start<br>
-    <input id=reset-button onclick=reset() type=button value=Reset>
-</div>
-
+<div id=settings></div>
 <hr>
-
 <span id=text>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nibh ligula, dictum ut pulvinar sed, fringilla non lectus. Nunc fermentum aliquam condimentum. Aenean iaculis varius massa, vel rutrum nunc dictum eget. Sed sed ante at diam gravida luctus. Mauris tellus sapien, fringilla convallis mollis nec, tempor et velit. Morbi est odio, aliquet non interdum rutrum, facilisis egestas felis. Curabitur quis nisl et lacus congue ultricies. Sed enim justo, varius condimentum egestas quis, sodales condimentum orci. Praesent porttitor consectetur leo, ac consequat magna vulputate et. Donec non sem sem.<br><br>
 
@@ -31,4 +23,5 @@ Donec a porttitor orci. Fusce vestibulum massa velit, at ullamcorper tortor. Don
 Nulla facilisi. Curabitur scelerisque, lectus ac sodales sollicitudin, justo massa convallis quam, eget tristique sapien eros eget urna. Fusce et neque lorem. Sed enim est, dapibus quis fermentum ac, mollis eget ligula. Aliquam erat volutpat. Aliquam odio erat, accumsan in sollicitudin ac, elementum nec augue. Sed vel tortor sit amet sapien elementum varius. Morbi sollicitudin mauris vitae augue suscipit hendrerit. Morbi nec elementum massa. Praesent condimentum dignissim nibh, eu scelerisque leo sollicitudin rutrum. Cras sit amet nibh eu leo scelerisque laoreet. Aliquam eu mauris at sapien placerat imperdiet vel eget turpis. Etiam posuere sem et justo ultrices suscipit. Vestibulum nibh dolor, lobortis sed eleifend sed, suscipit sit amet diam.
 </span>
 
+<script src=../common/js/settings.js></script>
 <script src=js/speedtext.js></script>
