replaced css with common dom.css

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>SpeedText.htm</title>
-<link href=css/speedtext.css rel=stylesheet>
+<link href=../common/css/dom.css rel=stylesheet>
 
 <div>
     Score: <b id=score>0</b><br>
