--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,8 @@
 <div>
     Score: <b id=score>0</b><br>
     Time: <b id=time>30</b> / <b>30</b><br>
-    <input id=start-button onclick=start() type=button value="Start [H]">
-    <input id=settings-button onclick=settings_toggle() type=button value=+>
+    <input id=start-button type=button value="Start [H]">
+    <input id=settings-button type=button value=+>
 </div>
 <div id=settings></div>
 <hr>
