removed </b>, added time-max

--- a/index.htm
+++ b/index.htm
@@ -4,8 +4,8 @@
 <link href=../common/css/dom.css rel=stylesheet>
 
 <div>
-    Score: <b id=score>0</b><br>
-    Time: <b id=time>30</b> / <b>30</b><br>
+    Score: <span id=score>0</span><br>
+    Time: <span id=time>30</span> / <span id=time-max-span>30</span><br>
     <input id=start-button type=button value="Start [H]">
     <input id=settings-button type=button value=+>
 </div>
