put settings into a table

--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
     <input id=start-button type=button value="Start [H]">
     <input id=settings-button type=button value=+>
 </div>
-<div id=settings></div>
+<table id=settings></table>
 <hr>
 <div id=text></div>
 
