added text setting

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     <input id=start-button type=button value="Start [H]">
 </div>
 <hr>
-<div id=text></div>
+<div id=text-div></div>
 
 <script src=../common/js/core.js></script>
 <script src=js/speedtext.js></script>
